--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<html lang="en">
+  <title>Your Name :: Portfolio</title>
+
 <html>
   <head>
     <meta charset="utf-8" />
@@ -45,7 +48,7 @@
             well as mobile applications.
           </p>
           <p>
-            <img src="images/300x200.jpg" class="left-float" />Lorem ipsum dolor
+            <img src="images/300x200.jpg" class="left-float" alt = image1 />Lorem ipsum dolor
             sit amet, consectetur adipisicing elit, sed do eiusmod tempor
             incididunt ut labore et dolore magna aliqua. Ut enim ad minim
             veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
