--- a/qualifications.html
+++ b/qualifications.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Qualification</title>
     <link rel="stylesheet" href="styles/mobile.css" />
   </head>
   <body>
