--- a/work-experience.html
+++ b/work-experience.html
@@ -31,7 +31,7 @@
         <section>
           <h2>Work Experience</h2>
           <p>
-            <img src="images/dishFour.jpg" />
+            <img src="images/dishFour.jpg" alt = "image3" />
           </p>
           <h3>Work #1</h3>
           <p>
