--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <h2>Welcome</h2>
           <p>
             <img
-              src="images/dishOne.jpg"
+              src="images/dishOne.jpg" alt = "image4"
             />
           </p>
           <p>
